@@ -17,6 +17,7 @@
 
 require "fat_free_crm/version"
 require "fat_free_crm/core_ext"
+require "fat_free_crm/permissions"
 require "fat_free_crm/tabs"
 require "fat_free_crm/callback"
 require "fat_free_crm/plugin"
